去掉设备状态的监听，邮件标题稍作调整

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <!--
         <receiver
             android:name=".NJReceiver"
             android:exported="false">
@@ -25,12 +26,12 @@
                 <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
             </intent-filter>
         </receiver>
+        -->
         <!-- BroadcastReceiver that listens for incoming SMS messages -->
         <receiver
-            android:name=".sms.SmsReceiver"
-            android:permission="android.permission.BROADCAST_SMS">
+            android:name=".sms.SmsReceiver">
             <intent-filter>
-                <action android:name="android.provider.Telephony.SMS_DELIVER" />
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
         <!-- BroadcastReceiver that listens for incoming MMS messages -->
